; ModuleID = '/home/carl/AnghaBench/libgit2/tests/rebase/extr_setup.c_test_rebase_setup__merge_onto_upstream_and_branch.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/rebase/extr_setup.c_test_rebase_setup__merge_onto_upstream_and_branch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@GIT_CHECKOUT_OPTIONS_INIT = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@GIT_CHECKOUT_FORCE = common dso_local global i32 0, align 4
@GIT_REPOSITORY_STATE_NONE = common dso_local global i32 0, align 4
@repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"refs/heads/beef\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"refs/heads/veal\00", align 1
@.str.2 = private unnamed_addr constant [17 x i8] c"refs/heads/gravy\00", align 1
@.str.3 = private unnamed_addr constant [18 x i8] c"refs/heads/master\00", align 1
@.str.4 = private unnamed_addr constant [41 x i8] c"efad0b11c47cb2f0220cbd6f5b0f93bb99064b00\00", align 1
@GIT_OBJECT_COMMIT = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [42 x i8] c"f87d14a4a236582a0278a916340a793714256864\0A\00", align 1
@.str.6 = private unnamed_addr constant [22 x i8] c"rebase/.git/ORIG_HEAD\00", align 1
@GIT_REPOSITORY_STATE_REBASE_MERGE = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [42 x i8] c"3e8989b5a16d5258c935d998ef0e6bb139cc4757\0A\00", align 1
@.str.8 = private unnamed_addr constant [31 x i8] c"rebase/.git/rebase-merge/cmt.1\00", align 1
@.str.9 = private unnamed_addr constant [42 x i8] c"4cacc6f6e740a5bc64faa33e04b8ef0733d8a127\0A\00", align 1
@.str.10 = private unnamed_addr constant [31 x i8] c"rebase/.git/rebase-merge/cmt.2\00", align 1
@.str.11 = private unnamed_addr constant [31 x i8] c"rebase/.git/rebase-merge/cmt.3\00", align 1
@.str.12 = private unnamed_addr constant [3 x i8] c"3\0A\00", align 1
@.str.13 = private unnamed_addr constant [29 x i8] c"rebase/.git/rebase-merge/end\00", align 1
@.str.14 = private unnamed_addr constant [42 x i8] c"efad0b11c47cb2f0220cbd6f5b0f93bb99064b00\0A\00", align 1
@.str.15 = private unnamed_addr constant [30 x i8] c"rebase/.git/rebase-merge/onto\00", align 1
@.str.16 = private unnamed_addr constant [8 x i8] c"master\0A\00", align 1
@.str.17 = private unnamed_addr constant [35 x i8] c"rebase/.git/rebase-merge/onto_name\00", align 1
@.str.18 = private unnamed_addr constant [35 x i8] c"rebase/.git/rebase-merge/orig-head\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_rebase_setup__merge_onto_upstream_and_branch() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_4__, align 4
  %12 = bitcast %struct.TYPE_4__* %11 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %12, i8* align 4 bitcast (%struct.TYPE_4__* @GIT_CHECKOUT_OPTIONS_INIT to i8*), i64 4, i1 false)
  %13 = load i32, i32* @GIT_CHECKOUT_FORCE, align 4
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  store i32 %13, i32* %14, align 4
  %15 = load i32, i32* @GIT_REPOSITORY_STATE_NONE, align 4
  %16 = load i32, i32* @repo, align 4
  %17 = call i32 @git_repository_state(i32 %16)
  %18 = call i32 @cl_assert_equal_i(i32 %15, i32 %17)
  %19 = load i32, i32* @repo, align 4
  %20 = call i32 @git_repository_set_head(i32 %19, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %21 = call i32 @cl_git_pass(i32 %20)
  %22 = load i32, i32* @repo, align 4
  %23 = call i32 @git_checkout_head(i32 %22, %struct.TYPE_4__* %11)
  %24 = call i32 @cl_git_pass(i32 %23)
  %25 = load i32, i32* @repo, align 4
  %26 = call i32 @git_reference_lookup(i32** %3, i32 %25, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %27 = call i32 @cl_git_pass(i32 %26)
  %28 = load i32, i32* @repo, align 4
  %29 = call i32 @git_reference_lookup(i32** %2, i32 %28, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0))
  %30 = call i32 @cl_git_pass(i32 %29)
  %31 = load i32, i32* @repo, align 4
  %32 = call i32 @git_reference_lookup(i32** %4, i32 %31, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.3, i64 0, i64 0))
  %33 = call i32 @cl_git_pass(i32 %32)
  %34 = load i32, i32* @repo, align 4
  %35 = load i32*, i32** %3, align 8
  %36 = call i32 @git_annotated_commit_from_ref(i32** %6, i32 %34, i32* %35)
  %37 = call i32 @cl_git_pass(i32 %36)
  %38 = load i32, i32* @repo, align 4
  %39 = load i32*, i32** %2, align 8
  %40 = call i32 @git_annotated_commit_from_ref(i32** %5, i32 %38, i32* %39)
  %41 = call i32 @cl_git_pass(i32 %40)
  %42 = load i32, i32* @repo, align 4
  %43 = load i32*, i32** %4, align 8
  %44 = call i32 @git_annotated_commit_from_ref(i32** %7, i32 %42, i32* %43)
  %45 = call i32 @cl_git_pass(i32 %44)
  %46 = load i32, i32* @repo, align 4
  %47 = load i32*, i32** %6, align 8
  %48 = load i32*, i32** %5, align 8
  %49 = load i32*, i32** %7, align 8
  %50 = call i32 @git_rebase_init(i32** %1, i32 %46, i32* %47, i32* %48, i32* %49, i32* null)
  %51 = call i32 @cl_git_pass(i32 %50)
  %52 = call i32 @git_oid_fromstr(i32* %10, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.4, i64 0, i64 0))
  %53 = load i32, i32* @repo, align 4
  %54 = call i32 @git_repository_head(i32** %8, i32 %53)
  %55 = call i32 @cl_git_pass(i32 %54)
  %56 = load i32*, i32** %8, align 8
  %57 = load i32, i32* @GIT_OBJECT_COMMIT, align 4
  %58 = call i32 @git_reference_peel(i32** %9, i32* %56, i32 %57)
  %59 = call i32 @cl_git_pass(i32 %58)
  %60 = load i32*, i32** %9, align 8
  %61 = call i32 @git_commit_id(i32* %60)
  %62 = call i32 @cl_assert_equal_oid(i32* %10, i32 %61)
  %63 = call i32 @cl_assert_equal_file(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.5, i64 0, i64 0), i32 41, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.6, i64 0, i64 0))
  %64 = load i32, i32* @GIT_REPOSITORY_STATE_REBASE_MERGE, align 4
  %65 = load i32, i32* @repo, align 4
  %66 = call i32 @git_repository_state(i32 %65)
  %67 = call i32 @cl_assert_equal_i(i32 %64, i32 %66)
  %68 = call i32 @cl_assert_equal_file(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.7, i64 0, i64 0), i32 41, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.8, i64 0, i64 0))
  %69 = call i32 @cl_assert_equal_file(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.9, i64 0, i64 0), i32 41, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.10, i64 0, i64 0))
  %70 = call i32 @cl_assert_equal_file(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.5, i64 0, i64 0), i32 41, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.11, i64 0, i64 0))
  %71 = call i32 @cl_assert_equal_file(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.12, i64 0, i64 0), i32 2, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.13, i64 0, i64 0))
  %72 = call i32 @cl_assert_equal_file(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.14, i64 0, i64 0), i32 41, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.15, i64 0, i64 0))
  %73 = call i32 @cl_assert_equal_file(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.16, i64 0, i64 0), i32 7, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.17, i64 0, i64 0))
  %74 = call i32 @cl_assert_equal_file(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.5, i64 0, i64 0), i32 41, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.18, i64 0, i64 0))
  %75 = load i32*, i32** %9, align 8
  %76 = call i32 @git_commit_free(i32* %75)
  %77 = load i32*, i32** %8, align 8
  %78 = call i32 @git_reference_free(i32* %77)
  %79 = load i32*, i32** %5, align 8
  %80 = call i32 @git_annotated_commit_free(i32* %79)
  %81 = load i32*, i32** %6, align 8
  %82 = call i32 @git_annotated_commit_free(i32* %81)
  %83 = load i32*, i32** %7, align 8
  %84 = call i32 @git_annotated_commit_free(i32* %83)
  %85 = load i32*, i32** %2, align 8
  %86 = call i32 @git_reference_free(i32* %85)
  %87 = load i32*, i32** %3, align 8
  %88 = call i32 @git_reference_free(i32* %87)
  %89 = load i32*, i32** %4, align 8
  %90 = call i32 @git_reference_free(i32* %89)
  %91 = load i32*, i32** %1, align 8
  %92 = call i32 @git_rebase_free(i32* %91)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #2

declare dso_local i32 @git_repository_state(i32) #2

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_repository_set_head(i32, i8*) #2

declare dso_local i32 @git_checkout_head(i32, %struct.TYPE_4__*) #2

declare dso_local i32 @git_reference_lookup(i32**, i32, i8*) #2

declare dso_local i32 @git_annotated_commit_from_ref(i32**, i32, i32*) #2

declare dso_local i32 @git_rebase_init(i32**, i32, i32*, i32*, i32*, i32*) #2

declare dso_local i32 @git_oid_fromstr(i32*, i8*) #2

declare dso_local i32 @git_repository_head(i32**, i32) #2

declare dso_local i32 @git_reference_peel(i32**, i32*, i32) #2

declare dso_local i32 @cl_assert_equal_oid(i32*, i32) #2

declare dso_local i32 @git_commit_id(i32*) #2

declare dso_local i32 @cl_assert_equal_file(i8*, i32, i8*) #2

declare dso_local i32 @git_commit_free(i32*) #2

declare dso_local i32 @git_reference_free(i32*) #2

declare dso_local i32 @git_annotated_commit_free(i32*) #2

declare dso_local i32 @git_rebase_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
